--- a/package.json
+++ b/package.json
@@ -27,11 +27,17 @@
   },
   "homepage": "https://github.com/Akhilesh-pilkhwal/react-redux-webpack-boilerplate#readme",
   "dependencies": {
+    "antd": "^4.5.4",
     "eslint": "^7.6.0",
     "express": "^4.17.1",
     "express-static-gzip": "^2.0.7",
+    "formik": "^2.1.5",
+    "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "style-loader": "^1.2.1",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.0",
